--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "jose": "^6.0.11",
     "lucide-react": "^0.511.0",
