--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-spinners": "^0.17.0",
     "recharts": "^2.15.3",
     "sonner": "^2.0.5",
+    "sweetalert": "^2.1.2",
     "tailwind-merge": "^3.3.0",
     "vaul": "^1.1.2",
     "zod": "^3.25.48",
